Prevent parent screen from scrolling under any circumstances.
It would scroll when the jQuery dropdown menu would flow off-screen at the bottom. Whereas it's still not good that this plugin does this, we can't let it cause the whole screen to scroll.

--- a/views/index.css
+++ b/views/index.css
@@ -4,6 +4,7 @@ body {
     background-color: black;
     font-family: Calibri, 'Trebuchet MS', 'Gill Sans', 'Gill Sans MT', sans-serif;
     color: #eee;
+    overflow: hidden;
 }
 
 video {
